Fix(HttpService) Changed method from HTTPSUrlConnection to HttpClient