@@ -3,12 +3,12 @@ package com.ut.sm42.service;
 
 import org.springframework.stereotype.Service;
 
-import java.io.BufferedReader;
-import java.io.DataOutputStream;
-import java.io.IOException;
-import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.URL;
+import java.io.*;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.time.Duration;
 
 
 @Service
@@ -16,116 +16,77 @@ public class HttpService {
 
 
 
-
+    private static final HttpClient httpClient = HttpClient.newBuilder()
+            .version(HttpClient.Version.HTTP_1_1)
+            .connectTimeout(Duration.ofSeconds(30))
+            .build();
 
 
 
     public String sendRequestHttpS(String url, String method, String username, String password, String type, String body, String token) throws IOException {
-        URL obt= new URL(url);
-        HttpURLConnection con =null;
+        HttpResponse<String> response;
+        HttpRequest.Builder requestBuilder = HttpRequest.newBuilder()
+                .uri(URI.create(url));
+        String finalString;
         try {
-            con = (HttpURLConnection) obt.openConnection();
-            con.setRequestMethod(method);
-           // con.setRequestProperty("X-Experience-Api-Version","1.0.1");
 
-            if(username != null){
-                con.setRequestProperty("user", username);
-                con.setRequestProperty("password", password);
+            switch (method){
+                case "GET":
+                    requestBuilder.GET();
+
+                    break;
+
+                case "POST":
+                    byte[] sampleData = body.getBytes();
+                    requestBuilder
+                            .POST(HttpRequest.BodyPublishers
+                                    .ofInputStream(() -> new ByteArrayInputStream(sampleData)));
+
+                    break;
+
+                case "PUT":
+
+                    break;
+
+                case "DELETE":
+
+                    break;
             }
             if(token!= null){
-                con.setRequestProperty("Authorization",token);
+                requestBuilder.setHeader("Authorization", token);
             }
-            if(method=="POST"){
-                if(type=="soap"){
-                    con.setRequestProperty("Content-Type","application/soap+xml; charset=utf-8");
-                    con.setDoOutput(true);
-                    DataOutputStream wr = new DataOutputStream(con.getOutputStream());
-                    wr.writeBytes(body);
-                    wr.flush();
-                    wr.close();
-                }
-                if(type=="json"){
-                    con.setRequestProperty("Content-Type","application/json; charset=utf-8");
-                    if(body!=null){
-                        con.setDoOutput(true);
-                        DataOutputStream wr = new DataOutputStream(con.getOutputStream());
-                        wr.writeBytes(body);
-                        wr.flush();
-                        wr.close();
-                    }
+            if(type.equals("json")){
+                requestBuilder.setHeader("Content-Type","application/json; charset=utf-8");
+            }
 
-                }
-            }
         }catch (Exception e){
             System.out.println(e);
             System.out.println("Api CAIDA, no se puede conectar");
             return "[{\"status\":\"Error\", \"detail\":{\"id\":\"Null\"}}]";
         }
 
-
-
-
-        //con.setConnectTimeout(30*1000);
-        //con.setReadTimeout(30*1000);
         int responseCode=0;
         try{
-            responseCode = con.getResponseCode();
+            response = httpClient.send(requestBuilder.build(), HttpResponse.BodyHandlers.ofString());
+
+            responseCode = response.statusCode();
         }catch (Exception e){
             System.out.println(e);
             System.out.println("Api CAIDA, no se puede conectar");
-            return "[{\"status\":\"Error\", \"detail\":{\"id\":\"Null\"}}]";
+            return "{\"status\":\"Error\", \"detail\":{\"id\":\"Null\"}}";
         }
 
-        //System.out.println(" Response Code :: " + responseCode);
-        String inputLine;
-        StringBuffer response = new StringBuffer();
-        String finalString ="";
+
         switch (responseCode){
 
             case 200:
-                BufferedReader in = new BufferedReader(new InputStreamReader(
-                        con.getInputStream()));
-
-
-                    while ((inputLine = in.readLine()) != null) {
-                        response.append(inputLine);
-                    }
-                    in.close();
-                    // print result
-                    //System.out.println(response.toString());
-                    finalString=response.toString();
-
-
-                 break;
+                finalString=response.body();
+                break;
 
             case 201:
 
-                 in = new BufferedReader(new InputStreamReader(
-                        con.getInputStream()));
-                while ((inputLine = in.readLine()) != null) {
-                    response.append(inputLine);
-                }
-                in.close();
-                // print result
-                //System.out.println(response.toString());
-               // finalString=response.toString();
+
                 finalString="{\"status\":\"Created\", \"detail\":\"Not found\"}";
-                 break;
-
-            case 400:
-                 in = new BufferedReader(new InputStreamReader(
-                        con.getInputStream()));
-
-
-                while ((inputLine = in.readLine()) != null) {
-                    response.append(inputLine);
-                }
-                in.close();
-                // print result
-                //System.out.println(response.toString());
-                finalString=response.toString();
-
-
                 break;
 
             case 404:
@@ -136,7 +97,7 @@ public class HttpService {
 
             case 500:
                 System.out.println("POST request not worked");
-                finalString="{\"status\":\"500\", \"detail\":\""+ con.getResponseMessage()+"\"}";
+                finalString="{\"status\":\"500\", \"detail\":\""+ response.body()+"\"}";
                 break;
 
             default:
